--- a/laba_1/app/src/main/res/layout/activity_main.xml
+++ b/laba_1/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,15 @@
         android:text="@string/result"
         android:onClick="goToResults"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_sign_out"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/counter"
+        android:text="@string/sign_out"
+        android:onClick="signOut"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
