--- a/laba_2/app/src/main/res/layout/fragment_home.xml
+++ b/laba_2/app/src/main/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
         android:text="@string/products"
         android:textAlignment="center"
         android:textSize="30dp"
+        android:layout_marginBottom="10dp"
         />
 
     <View
