--- a/laba_2/app/src/main/res/layout/item_list.xml
+++ b/laba_2/app/src/main/res/layout/item_list.xml
@@ -1,45 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginBottom="50dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:layout_height="80dp">
 
     <ImageView
         android:id="@+id/image_product"
-        android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="220dp"
-        android:layout_height="80dp">
-        <TextView
-            android:id="@+id/category_product"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="skdgjposekggps"/>
 
-        <TextView
-            android:id="@+id/title_product"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:textAlignment="center"
-            android:text="ksgjpaszkfo"
-            />
+    <TextView
+        android:id="@+id/category_product"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:paddingTop="20dp"
+        android:layout_gravity="center"/>
 
-    </LinearLayout>
 
     <TextView
         android:id="@+id/price_product"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="match_parent"
+        android:textStyle="bold"
+        android:paddingTop="20dp"
         android:layout_gravity="center"/>
 
 </LinearLayout>
